@@ -28,6 +28,8 @@ public:
 	void EqualizeRows(); 
 	void EqualizeCols(); 
 
+	virtual void RecalcLayout();    // call after changing sizes
+
 private:
 	BOOL m_bBarLocked;
 	BOOL m_bResizePanes;
